--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "pwa-spike",
+  "name": "visitor_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-qr-reader": "^2.2.1",
+    "react-scripts": "3.1.1",
+    "react-tabs": "^3.0.0",
+    "react-web-ar": "1.0.0-beta2"
   },
   "scripts": {
     "start": "react-scripts start",
