--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.9.0",
     "react-qr-reader": "^2.2.1",
     "react-scripts": "3.1.1",
+    "react-simple-conditional": "^0.0.1",
     "react-tabs": "^3.0.0",
     "react-web-ar": "1.0.0-beta2",
     "workbox-cli": "^4.3.1"
